# Kuasarr

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Kuasarr.py  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.claude/: identity.json  launch.json  settings.json
.claude/agents/: newznab-contract-reviewer.md  security-reviewer.md
.claude/commands/: add-language-rules.md  database-migration.md  feature-development.md
.claude/enterprise/: controls.md
.claude/hooks/: guard_commit.sh  guard_version.sh  session-start.sh
.claude/rules/: everything-claude-code-guardrails.md
.github/: Changelog.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: unified-ci.yml
.mulch/: mulch.config.yaml
.mulch/expertise/: captcha.jsonl  debug.jsonl  documentation.jsonl  security.jsonl  sponsors-helper.jsonl
docs/: Coding-Style.md  Contributing.md  Development.md  Project-Structure.md  README.md  SPRINT_5_PLAN.md  SPRINT_6_PLAN.md  SPRINT_PLAN.md  SPRINT_PLAN_V2.md  Security.md  Testing.md  filecrypt-captcha-solver-history.md  flaresolverr-setup.md  quasarr-integration-plan.md  ui_analyse.md  ui_optimierung.md  ultracc_install.md  update_guide.md  windows_guide.md  xrel_integration.md
docs/setup/: flaresolverr.md  jdownloader.md  lazylibrarian.md  radarr.md  (+1 more)
kuasarr/: __init__.py  constants.py
kuasarr.egg-info/: PKG-INFO  SOURCES.txt
scripts/: build_release.py  generate_pwa_icons.py  requirements-py39.txt
tests/: test_debug.py  test_imdb_metadata.py  test_security.py  test_sj_source.py
(+179 files in other folders)
