[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kuasarr"
version = "1.12.2"
description = "kuasarr connects JDownloader with Radarr, Sonarr and LazyLibrarian. It also decrypts links protected by CAPTCHAs, using an additional CaptchaSolverr."
readme = "README.md"
license = "MIT"
authors = [
    { name = "weedo078", email = "weedo0780@protonmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4>=4.14.2",
    "bottle>=0.13.4",
    "deathbycaptcha-official>=4.6.0",
    "dukpy>=0.5.0",
    "pillow>=12.0.0",
    "pycryptodomex>=3.23.0",
    "requests>=2.32.5",
    "urllib3>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/weedo078/Kuasarr"

[project.scripts]
kuasarr = "kuasarr:run"


[tool.setuptools.packages.find]
include = ["kuasarr*"]

[tool.setuptools.package-data]
kuasarr = ["static/*.png", "static/*.js", "static/*.html", "static/*.webmanifest"]
